# beam

./: .gitignore  README.txt
src/: CMakeLists.txt  CMakeLists.txt~
src/beam/exe/: CMakeLists.txt  beamformer.cpp  test.cpp  test_ssl.cpp
src/beam/lib/: Beamformer.cpp  Beamformer.h  CMakeLists.txt  Calibrator.cpp  Calibrator.h  Coords.h  DSPFilter.cpp  DSPFilter.h  DeReverb.cpp  DeReverb.h  DelaySumBeamformer.cpp  DelaySumBeamformer.h  Dsplib.h  FFT.cpp  FFT.h  GSCBeamformer.cpp  GSCBeamformer.h  GlobalConfig.h  KinectConfig.cpp  KinectConfig.h  MCLT.cpp  MCLT.h  MVDRBeamformer.cpp  MVDRBeamformer.h  Math.cpp  Math.h  MicArrayDescriptor.h  MicArrayWeights.h  Microphone.cpp  Microphone.h  MicrophoneArray.cpp  MicrophoneArray.h  MsrNS.cpp  MsrNS.h  MsrVAD.cpp  MsrVAD.h  NoiseSuppressor.cpp  NoiseSuppressor.h  Pipeline.cpp  Pipeline.h  (+9 more)
